--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 <title>FoodRescueLandingPage</title>
 <meta charset="utf-8">
@@ -66,7 +66,7 @@ footer {
     border-radius: 20px;
 }
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-@media (max-width: 600px) {
+@media (max-width: 900px) {
   nav, article {
     width: 100%;
     height: auto;
