--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 
 #titulo_principal{
     text-align: center;
-    color: brow;
+    color: black;
     font-family: 'Times New Roman', Times, serif;
     font-size: 60px;
 }
@@ -59,7 +59,7 @@ section::after {
 
 /* Style the footer */
 footer {
-  background-color: #f1f1f1;
+  background-color: #f2f2f2;
   padding: 10px;
   text-align: center;
   color: black;
